--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
   "dependencies": {
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "latest",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
+    "eslint": "^8.37.0",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "latest",
